tests/miniJava/neg/004782_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( ) { return int [] java ; 0 ; } }
